--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
-    <title>Jogos piratas</title>
+    <title>Jogos educativos</title>
 </head>
-<header><p><b>Jogos piratas ponto com</b></p></header>
+<header><p><b>Jogos educativos ponto com</b></p></header>
 
 <body>
     <main>
