correção endereco de img

--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
         <div class="image-grid" id="gameGrid">
             <h3 class="game-item">
                 <a href="../jogo pirata/seedGame/spiderhomem2 v1.4.5.torrent"> 
-                    <img src="../jogo pirata/img/SpiderMan2PC2.jpeg" height="100px" width="100px"><p>Spider-Man 2</p></a>
+                    <img src="img/SpiderMan2PC2.jpeg" height="100px" width="100px"><p>Spider-Man 2</p></a>
             </h3>
             <h3 class="game-item">
                 <a href="views/rdr2.html"> 
-                    <img src="../jogo pirata/img/Hpl5MtwQgOVF9vJqlfui6SDB5Jl4oBSq.jpeg" height="100px" width="100px"><p>Read Dead Redemption 2</p></a>
+                    <img src="img/Hpl5MtwQgOVF9vJqlfui6SDB5Jl4oBSq.jpeg" height="100px" width="100px"><p>Read Dead Redemption 2</p></a>
             </h3>
             <h3 class="game-item">
                 <a href="../jogo pirata/game/WDL.torrent"> 
-                    <img src="../jogo pirata/img/legion.jpeg" height="100px" width="100px"><p>Watch Dogs Legion</p></a>
+                    <img src="img/legion.jpeg" height="100px" width="100px"><p>Watch Dogs Legion</p></a>
             </h3>
             <h3 class="game-item">
                 <a href="../jogo pirata/game/GhostOfTsushima.torrent"> 
-                    <img src="../jogo pirata/img/GhistOFts.jpg" height="100px" width="100px"><p>Ghost Of Tsushima</p></a>
+                    <img src="img/GhistOFts.jpg" height="100px" width="100px"><p>Ghost Of Tsushima</p></a>
             </h3>
             <h3 class="game-item">
                 <a href=""> 
-                    <img src="../jogo pirata/img/acShadows.jpeg" height="100px" width="100px"><p>Assassins Creed Shadows</p></a>
+                    <img src="img/acShadows.jpeg" height="100px" width="100px"><p>Assassins Creed Shadows</p></a>
             </h3>
             <h3 class="game-item">
                 <a href=""> 
-                    <img src="../jogo pirata/img/download.jpeg" height="100px" width="100px"><p>Grand Theft Auto V</p></a>
+                    <img src="img/download.jpeg" height="100px" width="100px"><p>Grand Theft Auto V</p></a>
             </h3>
             <h3 class="game-item">
                 <a href="../jogo pirata/game/ac nordico lá sla to com sono.torrent"> 
-                    <img src="../jogo pirata/img/valhalla.png" height="100px" width="100px"><p>Assassins Creed Valhalla</p></a>
+                    <img src="img/valhalla.png" height="100px" width="100px"><p>Assassins Creed Valhalla</p></a>
             </h3>
         </div>
     </main>
