--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
     <title>Jogos educativos</title>
+    <link rel="icon" href="img/video-game-vector-icon.jpg" type="image/x-icon">
 </head>
 <header><p><b>Jogos educativos ponto com</b></p></header>
 
