att barra home/page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <link rel="icon" href="img/video-game-vector-icon.jpg" type="image/x-icon">
 </head>
 <header><p><b>Jogos educativos ponto com</b></p></header>
-
 <body>
     <main>
-
+        <div class="menu">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Page</a></li>
+            </ul>
+        </div>
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Pesquisar Jogos...">
             <button onclick="searchGames()">Buscar</button>
@@ -19,12 +23,12 @@
 
         <div class="image-grid" id="gameGrid">
             <h3 class="game-item">
-                <a href="../jogo pirata/seedGame/spiderhomem2 v1.4.5.torrent"> 
+                <a href="/seedGame/spiderhomem2 v1.4.5.torrent"> 
                     <img src="img/SpiderMan2PC2.jpeg" height="100px" width="100px"><p>Spider-Man 2</p></a>
             </h3>
             <h3 class="game-item">
                 <a href="views/rdr2.html"> 
-                    <img src="img/Hpl5MtwQgOVF9vJqlfui6SDB5Jl4oBSq.jpeg" height="100px" width="100px"><p>Read Dead Redemption 2</p></a>
+                    <img src="img/Hpl5MtwQgOVF9vJqlfui6SDB5Jl4oBSq.jpeg" height="100px" width="100px"><p>Red Dead Redemption 2</p></a>
             </h3>
             <h3 class="game-item">
                 <a href="../jogo pirata/game/WDL.torrent"> 
