--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <main>
         <div class="menu">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Page</a></li>
+                <li><strong><a href="index.html">Home</a></strong></li>
+                <li><strong><a href="#">Page</a></strong></li>
             </ul>
         </div>
         <div class="search-container">
@@ -49,6 +49,10 @@
             <h3 class="game-item">
                 <a href="../jogo pirata/game/ac nordico lá sla to com sono.torrent"> 
                     <img src="img/valhalla.png" height="100px" width="100px"><p>Assassins Creed Valhalla</p></a>
+            </h3>
+            <h3 class="game-item">
+                <a href=""> 
+                    <img src="img/Rooftops&Alleys.jpg" height="100px" width="100px"><p>Rooftops & Alleys</p></a>
             </h3>
         </div>
     </main>
