att caminho seed

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <ul>
                 <li><strong><a href="index.html">Home</a></strong></li>
                 <li><strong><a href="#">Page</a></strong></li>
+                <li><strong><a href="#">Categorias</a></strong></li>
             </ul>
         </div>
         <div class="search-container">
@@ -31,11 +32,11 @@
                     <img src="img/Hpl5MtwQgOVF9vJqlfui6SDB5Jl4oBSq.jpeg" height="100px" width="100px"><p>Red Dead Redemption 2</p></a>
             </h3>
             <h3 class="game-item">
-                <a href="../jogo pirata/game/WDL.torrent"> 
+                <a href="/seedGame/WatchDogs3.torrent"> 
                     <img src="img/legion.jpeg" height="100px" width="100px"><p>Watch Dogs Legion</p></a>
             </h3>
             <h3 class="game-item">
-                <a href="../jogo pirata/game/GhostOfTsushima.torrent"> 
+                <a href="/seedGame/GhostOfTsushima.torrent"> 
                     <img src="img/GhistOFts.jpg" height="100px" width="100px"><p>Ghost Of Tsushima</p></a>
             </h3>
             <h3 class="game-item">
@@ -47,12 +48,16 @@
                     <img src="img/download.jpeg" height="100px" width="100px"><p>Grand Theft Auto V</p></a>
             </h3>
             <h3 class="game-item">
-                <a href="../jogo pirata/game/ac nordico lá sla to com sono.torrent"> 
+                <a href="/seedGame/AssassinsCreedValhalla.torrent"> 
                     <img src="img/valhalla.png" height="100px" width="100px"><p>Assassins Creed Valhalla</p></a>
             </h3>
             <h3 class="game-item">
                 <a href="/seedGame/Rooftops.and.Alleys.The.Parkour.Game.v1.0.1.7.zip.torrent"> 
                     <img src="img/Rooftops&Alleys.jpg" height="100px" width="100px"><p>Rooftops & Alleys</p></a>
+            </h3>
+            <h3 class="game-item">
+                <a href="/seedGame/BMX.Streets-TENOKE.torrent"> 
+                    <img src="img/bmxstreets.jpeg" height="100px" width="100px"><p>Bmx Streets</p></a>
             </h3>
         </div>
     </main>
