--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +8,19 @@
     <title>Jogos educativos</title>
     <link rel="icon" href="img/video-game-vector-icon.jpg" type="image/x-icon">
 </head>
-<header><p><b>Jogos educativos ponto com</b></p></header>
-<body>
+<header>
+    <p><b>Jogos educativos ponto com</b></p>
+</header>
+
+<body>      
     <main>
         <div class="menu">
             <ul>
                 <li><strong><a href="index.html">Home</a></strong></li>
                 <li><strong><a href="#">Page</a></strong></li>
-                <li><strong><a href="#">Categorias</a></strong></li>
+                <li><strong><a href="./Categorias/categoriaIndex.html">Categorias</a></strong></li>
             </ul>
-        </div>
+        </div>  
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Pesquisar Jogos...">
             <button onclick="searchGames()">Buscar</button>
@@ -24,40 +28,58 @@
 
         <div class="image-grid" id="gameGrid">
             <h3 class="game-item">
-                <a href="/seedGame/spiderhomem2 v1.4.5.torrent"> 
-                    <img src="img/SpiderMan2PC2.jpeg" height="100px" width="100px"><p>Spider-Man 2</p></a>
+                <a href="/seedGame/spiderhomem2 v1.4.5.torrent">
+                    <img src="img/SpiderMan2PC2.jpeg" height="100px" width="100px">
+                    <p>Spider-Man 2</p>
+                </a>
             </h3>
             <h3 class="game-item">
-                <a href="views/rdr2.html"> 
-                    <img src="img/Hpl5MtwQgOVF9vJqlfui6SDB5Jl4oBSq.jpeg" height="100px" width="100px"><p>Red Dead Redemption 2</p></a>
+                <a href="views/rdr2.html">
+                    <img src="img/Hpl5MtwQgOVF9vJqlfui6SDB5Jl4oBSq.jpeg" height="100px" width="100px">
+                    <p>Red Dead Redemption 2</p>
+                </a>
             </h3>
             <h3 class="game-item">
-                <a href="/seedGame/WatchDogs3.torrent"> 
-                    <img src="img/legion.jpeg" height="100px" width="100px"><p>Watch Dogs Legion</p></a>
+                <a href="/seedGame/WatchDogs3.torrent">
+                    <img src="img/legion.jpeg" height="100px" width="100px">
+                    <p>Watch Dogs Legion</p>
+                </a>
             </h3>
             <h3 class="game-item">
-                <a href="/seedGame/GhostOfTsushima.torrent"> 
-                    <img src="img/GhistOFts.jpg" height="100px" width="100px"><p>Ghost Of Tsushima</p></a>
+                <a href="/seedGame/GhostOfTsushima.torrent">
+                    <img src="img/GhistOFts.jpg" height="100px" width="100px">
+                    <p>Ghost Of Tsushima</p>
+                </a>
             </h3>
             <h3 class="game-item">
-                <a href=""> 
-                    <img src="img/acShadows.jpeg" height="100px" width="100px"><p>Assassins Creed Shadows</p></a>
+                <a href="">
+                    <img src="img/acShadows.jpeg" height="100px" width="100px">
+                    <p>Assassins Creed Shadows</p>
+                </a>
             </h3>
             <h3 class="game-item">
-                <a href=""> 
-                    <img src="img/download.jpeg" height="100px" width="100px"><p>Grand Theft Auto V</p></a>
+                <a href="">
+                    <img src="img/download.jpeg" height="100px" width="100px">
+                    <p>Grand Theft Auto V</p>
+                </a>
             </h3>
             <h3 class="game-item">
-                <a href="/seedGame/AssassinsCreedValhalla.torrent"> 
-                    <img src="img/valhalla.png" height="100px" width="100px"><p>Assassins Creed Valhalla</p></a>
+                <a href="/seedGame/AssassinsCreedValhalla.torrent">
+                    <img src="img/valhalla.png" height="100px" width="100px">
+                    <p>Assassins Creed Valhalla</p>
+                </a>
             </h3>
             <h3 class="game-item">
-                <a href="/seedGame/Rooftops.and.Alleys.The.Parkour.Game.v1.0.1.7.zip.torrent"> 
-                    <img src="img/Rooftops&Alleys.jpg" height="100px" width="100px"><p>Rooftops & Alleys</p></a>
+                <a href="/seedGame/Rooftops.and.Alleys.The.Parkour.Game.v1.0.1.7.zip.torrent">
+                    <img src="img/Rooftops&Alleys.jpg" height="100px" width="100px">
+                    <p>Rooftops & Alleys</p>
+                </a>
             </h3>
             <h3 class="game-item">
-                <a href="/seedGame/BMX.Streets-TENOKE.torrent"> 
-                    <img src="img/bmxstreets.jpeg" height="100px" width="100px"><p>Bmx Streets</p></a>
+                <a href="/seedGame/BMX.Streets-TENOKE.torrent">
+                    <img src="img/bmxstreets.jpeg" height="100px" width="100px">
+                    <p>Bmx Streets</p>
+                </a>
             </h3>
         </div>
     </main>
@@ -79,4 +101,8 @@
     </script>
     
 </body>
+<footer>
+    <p><strong>© Gotico_suaveiro</strong></p>
+</footer>
+
 </html>
