--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                 </a>
             </h3>
             <h3 class="game-item">
+            <a href="/seedGame/dragon bolas sparkando zero (gamebounty) (1).torrent">
+                <img src="img/dbzZero.jpeg" height="100px" width="100px">
+                <p>Dragon Ball Sparking ZERO</p></a>
+            </h3>
+            <h3 class="game-item">
                 <a href="">
                     <img src="img/acShadows.jpeg" height="100px" width="100px">
                     <p>Assassins Creed Shadows</p>
