--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
                 </a>
             </h3>
             <h3 class="game-item">
+                <a href="/seedGame/rdrrrr1.torrent">
+                    <img src="img/rdr1.jpg" height="100px" width="100px">
+                    <p>Red Dead Redemption</p>
+                </a>
+            </h3>
+            <h3 class="game-item">
                 <a href="views/rdr2.html">
                     <img src="img/Hpl5MtwQgOVF9vJqlfui6SDB5Jl4oBSq.jpeg" height="100px" width="100px">
                     <p>Red Dead Redemption 2</p>
