--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
                 </a>
             </h3>
             <h3 class="game-item">
+                <a href="/seedGame/gggooooffw.torrent">
+                    <img src="img/godofwar2.jpg" height="100px" width="100px">
+                    <p>God of War Ragnarök</p>
+                </a>
+            </h3>
+            <h3 class="game-item">
                 <a href="/seedGame/rdrrrr1.torrent">
                     <img src="img/rdr1.jpg" height="100px" width="100px">
                     <p>Red Dead Redemption</p>
