--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                 </a>
             </h3>
             <h3 class="game-item">
+                <a href="seedGame/rua lutador V.torrent">
+                    <img src="img/brigaderuaV.jpg" height="100px" width="100px">
+                    <p>Street Fighter V</p>
+                </a>
+            </h3>
+            <h3 class="game-item">
                 <a href="/seedGame/rdrrrr1.torrent">
                     <img src="img/rdr1.jpg" height="100px" width="100px">
                     <p>Red Dead Redemption</p>
@@ -120,6 +126,6 @@
 </body>
 <footer>
     <p><strong>© Gotico_suaveiro</strong></p>
-</footer>
+</footer> 
 
 </html>
