--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </a>
             </h3>
             <h3 class="game-item">
-                <a href="seedGame/rua lutador V.torrent">
+                <a href="/seedGame/rua lutador V.torrent">
                     <img src="img/brigaderuaV.jpg" height="100px" width="100px">
                     <p>Street Fighter V</p>
                 </a>
@@ -73,6 +73,30 @@
             <a href="/seedGame/dragon bolas sparkando zero (gamebounty) (1).torrent">
                 <img src="img/dbzZero.jpeg" height="100px" width="100px">
                 <p>Dragon Ball Sparking ZERO</p></a>
+            </h3>
+            <h3 class="game-item">
+                <a href="/seedGame/Tekken 8.torrent">
+                    <img src="img/tk8.jpg" height="100px" width="100px">
+                    <p>Tekken 8</p>
+                </a>
+            </h3>
+            <h3 class="game-item">
+                <a href="/seedGame/Sleeping dogs.torrent">
+                    <img src="img/dormindocomcachorros.jpg" height="100px" width="100px">
+                    <p>Sleeping Dogs</p>
+                </a>
+            </h3>
+            <h3 class="game-item">
+                <a href="/seedGame/Forza Horizon 4 [Ecológica Verde].torrent">
+                    <img src="img/forzahorizon4.jpg" height="100px" width="100px">
+                    <p>Forza Horizon 4</p>
+                </a>
+            </h3>
+            <h3 class="game-item">
+                <a href="/seedGame/fh5 fitgarota.torrent">
+                    <img src="img/forzahorizon5.jpg" height="100px" width="100px">
+                    <p>Forza Horizon 5</p>
+                </a>
             </h3>
             <h3 class="game-item">
                 <a href="">
