att indiana jones

--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                 </a>
             </h3>
             <h3 class="game-item">
+                <a href="/seedGame/indiaaanaaa jonesss.torrent">
+                    <img src="img/indianajones.jpg" height="100px" width="100px">
+                    <p>Indiana Jones - Grande Círculo</p>
+                </a>
+            </h3>
+            <h3 class="game-item">
                 <a href="/seedGame/WatchDogs3.torrent">
                     <img src="img/legion.jpeg" height="100px" width="100px">
                     <p>Watch Dogs Legion</p>
@@ -88,13 +94,13 @@
             </h3>
             <h3 class="game-item">
                 <a href="/seedGame/Forza Horizon 4 [Ecológica Verde].torrent">
-                    <img src="img/forzahorizon4.jpg" height="100px" width="100px">
+                    <img src="img/forza4.jpg" height="100px" width="100px">
                     <p>Forza Horizon 4</p>
                 </a>
             </h3>
             <h3 class="game-item">
                 <a href="/seedGame/fh5 fitgarota.torrent">
-                    <img src="img/forzahorizon5.jpg" height="100px" width="100px">
+                    <img src="img/forza5.jpg" height="100px" width="100px">
                     <p>Forza Horizon 5</p>
                 </a>
             </h3>
